auth controls added

--- a/www/js/modules/events/events-days-details.html
+++ b/www/js/modules/events/events-days-details.html
@@ -2,7 +2,7 @@
     <ion-content class="has-header">
         <div class="list card">
             <div class="item item-image">
-                <img ng-src="{{::edc.img2}}" fallback-src="img/renaissance.jpg">
+                <img ng-src="{{::edc.img2}}" fallback-src="img/02.jpg">
             </div>
             <ion-item class="item-divider item-energized">{{'timePlace' | translate}}</ion-item>
             <div class="item item-icon-left item-text-wrap">
