ionic auth updates

--- a/www/js/modules/login/login.html
+++ b/www/js/modules/login/login.html
@@ -1,17 +1,20 @@
 <ion-view>
     <ion-content scroll="false">
         <section class="login-container">
-            <div class = "col header text-center">
-               <img src="./img/ionic.png" class = "logo" />
+            <div class = "col">
+               <img src="./img/logo.png"/ style="
+    height: 200px;
+    width: 200px;
+">
             </div>
-            <div class = "col button-row text-center">
+            <div class = "col button-row">
                <img src="./img/facebook-button.png" />
             </div>
-            <div class = "col button-row text-center" href="#/app/login">
-               <img src="./img/email-button.png" />
+            <div class = "col button-row" href="#/app/register">
+               <img src="./img/email-button.png"  href="#/app/register">
             </div>
-            <div class = "col text-center">
-                Already have an account? <strong><a href = "#/app/login">Sign in now!</a></strong>
+            <div class = "col">
+                Already have an account? <strong><a href = "#/app/loginauth">Sign in now!</a></strong>
             </div>            
         </section>
     </ion-content>
