--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
     <script src="js/modules/events/events-details-controller.js"></script>
     <script src="js/modules/localization/localization-service.js"></script>
     <script src="js/modules/profile/profile-controller.js"></script>
+    <script src="js/modules/kit/kit-controller.js"></script>
     <script src="js/modules/map/map-controller.js"></script>
     <script src="js/modules/map/mapGeolocation-services.js"></script>
     <!-- google map -->
