--- a/www/js/modules/contact/contact.html
+++ b/www/js/modules/contact/contact.html
@@ -1,18 +1,19 @@
 <ion-view title="{{'menu_contact' | translate}}">
-    <ion-content class="has-header">
-        <div ng-repeat="item in ::cc.contacts track by $index">
-            <img ng-if="::item.img!='null'" ng-src="{{::item.img}}" fallback-src="img/contact.jpg" class="renaissanceImg">
-            <h2 ng-if="::item.header!='null'" class="text-center">{{::item.header}}</h2>
-            <ion-item class="item item-icon-left ">
-                <i ng-if="::(item.title=='Address' || item.title=='Adresa')" class="icon ion-home energized"></i>
-                <i ng-if="::(item.title=='Telephone' || item.title=='Telefon')" class="icon ion-iphone energized"></i>
-                <i ng-if="::item.title=='Email'" class="icon ion-email energized"></i>
-                <i ng-if="::item.title=='Fax'" class="icon ion-printer energized"></i>
-                <i ng-if="::item.title=='Web'" class="icon ion-wifi energized"></i>
-                {{::item.title}}:
-                <span class="item-note text-center">{{::item.information}}</span>
-            </ion-item>
-        </div>
-        <img class="centered" src="img/logo-footer.png">
+    <ion-content ng-if="('l'|translate)=='en'" class="has-header" scroll="false" has-bouncing="false">
+
+      <div class="list">
+        <a ng-repeat="item in cc.contacts" 
+           href="#/{{item.id}}"
+           class="item item-thumbnail-left">
+
+          <img src="img/logo.png">
+          <h4>{{ item.name }}</h4>
+          <h4>{{ item.address }}</h4>
+          <h4>{{ item.email }}</h4>
+        </a>
+
+      </div>
+
+
     </ion-content>
 </ion-view>
