--- a/www/js/modules/login/login.html
+++ b/www/js/modules/login/login.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-content scroll="false">
+    <ion-content ng-if="('l'|translate)=='en'" class="has-header" scroll="false" has-bouncing="false">
         <section class="login-container">
             <div class = "col">
                <img src="./img/logo.png"/ style="
