--- a/www/js/modules/profile/profile.html
+++ b/www/js/modules/profile/profile.html
@@ -1,14 +1,17 @@
 <ion-view title="{{'menu_profile' | translate}}">
+
+    <ion-content has-bouncing="false">
+
    <div class="list card">
 
   <div class="item item-avatar">
-    <img src="mcfly.jpg">
+    <img src="img/logo.png" style="height: 100px;width: 100px">
     <h2>Marty McFly</h2>
     <p>November 05, 1955</p>
   </div>
 
   <div class="item item-body">
-    <img class="full-image" src="delorean.jpg">
+    <img class="full-image" src="img/logo.png">
     <p>
       This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
       the content is from a card-body consisting of an image and paragraph text. The footer
@@ -21,6 +24,7 @@
   </div>
 
 </div>
+</ion-content>
 
 </ion-view>
 
