--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
@@ -21,9 +22,13 @@
 
     <!-- firebase backend  -->
     <!-- Firebase -->
+    <script src="lib/bluebird.min.js"></script>
+
     <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
+    <script src="lib/ionic.cloud.min.js"></script>
+
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -46,22 +51,27 @@
     <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
     <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyBlzF81PuRy_Q2D_OkEvThQ5aEFbdCfSiI",
-    authDomain: "medicallabs-a93a5.firebaseapp.com",
-    databaseURL: "https://medicallabs-a93a5.firebaseio.com",
-    projectId: "medicallabs-a93a5",
-    storageBucket: "medicallabs-a93a5.appspot.com",
-    messagingSenderId: "409001655450"
-  };
-  firebase.initializeApp(config);
-</script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyBlzF81PuRy_Q2D_OkEvThQ5aEFbdCfSiI",
+            authDomain: "medicallabs-a93a5.firebaseapp.com",
+            databaseURL: "https://medicallabs-a93a5.firebaseio.com",
+            projectId: "medicallabs-a93a5",
+            storageBucket: "medicallabs-a93a5.appspot.com",
+            messagingSenderId: "409001655450"
+        };
+        firebase.initializeApp(config);
+    </script>
 
 </head>
 
 <body ng-app="starter">
-  <ion-nav-view></ion-nav-view>
+
+
+
+
+    <ion-nav-view></ion-nav-view>
 </body>
+
 </html>
