--- a/www/js/modules/kit/kit.html
+++ b/www/js/modules/kit/kit.html
@@ -1,21 +1,21 @@
-
 <ion-view title="{{'menu_kit' | translate }}">
-	<ion-content ng-if="('l'|translate)=='en'" class="has-header" scroll="false" has-bouncing="false">
-		<div class="list">
-			<label class="item item-input item-stacked-label">
+    <ion-content ng-if="('l'|translate)=='en'" class="has-header" scroll="false" has-bouncing="false">
+        <div class="list">
+            <label class="item item-input item-stacked-label">
 				<span class="input-label">First Name</span>
-				<input type="text" placeholder="John">
+				<input ng-model="user.fname" type="text" placeholder="John">
 			</label>
-			<label class="item item-input item-stacked-label">
+            <label class="item item-input item-stacked-label">
 				<span class="input-label">Last Name</span>
-				<input type="text" placeholder="Suhr">
+				<input ng-model="user.lname"  type="text" placeholder="Suhr">
 			</label>
-			<label class="item item-input item-stacked-label">
+            <label class="item item-input item-stacked-label">
 				<span class="input-label">Email</span>
-				<input type="text" placeholder="john@suhr.com">
+				<input ng-model="user.email"  type="text" placeholder="john@suhr.com">
+				  <ion-checkbox ng-model="user.location">Share location</ion-checkbox>
 			</label>
-			<button class="button button-full button-positive" ng-click="createUser(user)">Add My Kit</button>
+            <button class="button button-full button-positive" ng-click="createUser(user)">Add My Kit</button>
 
-		</div>
-	</ion-content>
+        </div>
+    </ion-content>
 </ion-view>
