--- a/www/js/modules/map/map.html
+++ b/www/js/modules/map/map.html
@@ -7,9 +7,13 @@
         <div class="angular-google-map-container" data-tap-disabled="true">
             <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="true" options="options" bounds="map.bounds">
                 <ui-gmap-markers models="markers" idKey="'idKey'" coords="'self'" icon="'icon'" isLabel='true' click="onClick()">
-                    <ui-gmap-windows show="show">
-                        <div ng-non-bindable>{{map.title}}</div>
+
+
+                    <ui-gmap-windows show="'show'" closeClick="'closeClick'" templateUrl="'templateUrl'" templateParameter="'templateParameter'" ng-cloak>
+                        <div ng-non-bindable>{{address}}</div>
                     </ui-gmap-windows>
+
+
                 </ui-gmap-markers>
             </ui-gmap-google-map>
         </div>
