--- a/www/js/modules/map/map.html
+++ b/www/js/modules/map/map.html
@@ -1,5 +1,5 @@
 <ion-view title="{{'menu_map' | translate}}" cache="false">
-    <ion-nav-buttons side="left">
+    <ion-nav-buttons side="right">
         <button class="button button-icon icon ion-location light" ng-click="currentLocation()"></button>
     </ion-nav-buttons>
     <ion-content class="has-header">
