--- a/www/js/modules/menu/menu.html
+++ b/www/js/modules/menu/menu.html
@@ -1,63 +1,58 @@
-<ion-side-menus>
-    <ion-pane ion-side-menu-content>
-        <ion-nav-bar class="bar-air nav-title-slide-ios7">
-            <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back light"></i></ion-nav-back-button>
-            <ion-nav-buttons side="right">
-                <button menu-toggle="right" class="button button-icon icon ion-navicon light"></button>
+<ion-side-menus enable-menu-with-back-views="false">
+
+    <ion-side-menu-content>
+        <ion-nav-bar class="bar-positive">
+            <ion-nav-back-button>
+            </ion-nav-back-button>
+
+            <ion-nav-buttons side="left">
+                <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+              </button>
             </ion-nav-buttons>
         </ion-nav-bar>
-        <ion-nav-view name="menuContent" animation="fade-in-out"></ion-nav-view>
-    </ion-pane>
 
-    <ion-side-menu side="right">
+        <ion-nav-view name="menuContent"></ion-nav-view>
+    </ion-side-menu-content>
+
+
+    <ion-side-menu side="left">
         <header class="bar bar-header bar-air">
             <h1 class="title">{{"menu_name" | translate}}</h1>
         </header>
         <ion-content class="has-header">
             <ion-list>
-                <ion-item menu-close href="#/app/renaissance" class=" item-icon-left" >
-                    <i class="icon ion-information-circled energized"></i>
-                    {{"menu_about_opiods_overdose" | translate}}
+                <ion-item menu-close href="#/app/renaissance" class=" item-icon-left">
+                    <i class="icon ion-information-circled energized"></i> {{"menu_about_opiods_overdose" | translate}}
                 </ion-item>
                 <ion-item ng-if="isLoggedIn()" menu-close href="#/app/events/day1/day1" class=" item-icon-left">
-                    <i class="icon ion-medkit energized"></i>
-                    {{"menu_event" | translate}}
+                    <i class="icon ion-medkit energized"></i> {{"menu_event" | translate}}
                 </ion-item>
                 <ion-item menu-close href="#/app/kit" class=" item-icon-left">
-                    <i class="icon ion-medkit energized"></i>
-                    {{"menu_kit" | translate}}
+                    <i class="icon ion-medkit energized"></i> {{"menu_kit" | translate}}
                 </ion-item>
                 <ion-item menu-close href="#/app/map" class=" item-icon-left">
-                    <i class="icon ion-map energized"></i>
-                    {{"menu_map" | translate}}
+                    <i class="icon ion-map energized"></i> {{"menu_map" | translate}}
                 </ion-item>
                 <ion-item menu-close href="#/app/911" class=" item-icon-left">
-                    <i class="icon ion-alert energized"></i>
-                    {{"menu_call911" | translate}}
+                    <i class="icon ion-alert energized"></i> {{"menu_call911" | translate}}
                 </ion-item>
                 <ion-item ng-if="isLoggedIn()" menu-close href="#/app/profile" class="item item-icon-left ">
-                    <i class="icon ion-home energized"></i>
-                    {{"menu_profile" | translate}}
+                    <i class="icon ion-home energized"></i> {{"menu_profile" | translate}}
                 </ion-item>
-                <ion-item  ng-if="! isLoggedIn()" menu-close href="#/app/login" class="item item-icon-left ">
-                    <i class="icon ion-log-in energized"></i>
-                    {{"menu_login" | translate}}
+                <ion-item ng-if="! isLoggedIn()" menu-close href="#/app/login" class="item item-icon-left ">
+                    <i class="icon ion-log-in energized"></i> {{"menu_login" | translate}}
                 </ion-item>
                 <ion-item ng-if="! isLoggedIn()" menu-close href="#/app/register" class="item item-icon-left ">
-                    <i class="icon ion-person-add energized"></i>
-                    {{"menu_register" | translate}}
+                    <i class="icon ion-person-add energized"></i> {{"menu_register" | translate}}
                 </ion-item>
-                <ion-item  menu-close href="#/app/contact" class="item item-icon-left ">
-                    <i class="icon ion-ios-telephone  energized"></i>
-                    {{"menu_contact" | translate}}
+                <ion-item menu-close href="#/app/contact" class="item item-icon-left ">
+                    <i class="icon ion-ios-telephone  energized"></i> {{"menu_contact" | translate}}
                 </ion-item>
                 <ion-item ng-if="isLoggedIn()" menu-close ng-click="logout()" class="item item-icon-left ">
-                    <i class="icon ion-log-out energized"></i>
-                    {{"menu_logout" | translate}}
+                    <i class="icon ion-log-out energized"></i> {{"menu_logout" | translate}}
                 </ion-item>
                 <ion-item menu-close href="#/app/help" class="item item-icon-left ">
-                    <i class="icon ion-help-circled energized"></i>
-                    {{"menu_help" | translate}}
+                    <i class="icon ion-help-circled energized"></i> {{"menu_help" | translate}}
                 </ion-item>
             </ion-list>
         </ion-content>
