--- a/www/js/modules/menu/menu.html
+++ b/www/js/modules/menu/menu.html
@@ -33,7 +33,7 @@
                 <ion-item menu-close href="#/app/map" class=" item-icon-left">
                     <i class="icon ion-map energized"></i> {{"menu_map" | translate}}
                 </ion-item>
-                <ion-item menu-close href="#/app/911" class=" item-icon-left">
+                <ion-item menu-close href="tel:+911" class=" item-icon-left">
                     <i class="icon ion-alert energized"></i> {{"menu_call911" | translate}}
                 </ion-item>
                 <ion-item ng-if="isLoggedIn()" menu-close href="#/app/profile" class="item item-icon-left ">
