--- a/www/js/modules/profile/profile.html
+++ b/www/js/modules/profile/profile.html
@@ -8,18 +8,17 @@
                 <img src={{sc.photoUrl}} fallback-src="img/logo.png" style="height: 100px;width: 100px">
                 <h2>{{sc.name}}</h2>
                 <p>{{sc.email}}</p>
-                <p>{{sc.uid}}</p>
 
             </div>
 
             <div class="item item-body">
                 <img class="full-image" src={{sc.photoUrl}} fallback-src="img/logo.png">
                 <p>
-                    This is a "Facebook" styled Card. The header is created from a Thumbnail List item, the content is from a card-body consisting of an image and paragraph text. The footer consists of tabs, icons aligned left, within the card-footer.
+                    Opioid intoxication is a condition caused by use of opioid-based drugs. These include morphine, heroin, oxycodone, and synthetic (man-made) opioid narcotics. Prescription opioids are used to treat pain. Intoxication or overdose can lead to a loss of alertness, unconsciousness.
                 </p>
                 <p>
-                    <a href="#" class="subdued">1 Like</a>
-                    <a href="#" class="subdued">5 Comments</a>
+                    <a href="#/app/kit" class="subdued">add kit</a>
+                    <a href="#/app/drugs/individual/individual" class="subdued">view kits</a>
                 </p>
             </div>
 
