updates in R-01 for map markers

--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
     <script src="js/modules/drugs/individual-controller.js"></script>
     <script src="js/modules/drugs/hospital-controller.js"></script>
 
+    <script src="js/modules/help/helpController.js"></script>
 
     <script src="js/modules/localization/localization-service.js"></script>
     <script src="js/modules/profile/profile-controller.js"></script>
