--- a/www/js/modules/map/info.html
+++ b/www/js/modules/map/info.html
@@ -3,8 +3,7 @@
         <div class="previewimage-container">
             <img data-ng-attr-src="{{:: parameter.img }}">
         </div>
-        <span>{{:: parameter.title }}</span>
-        <span>{{:: parameter.address }}</span>
+        <span>{{:: parameter.mobile }} Mob: {{:: parameter.mobile }}</span>
 
     </div>
 </div>
