--- a/www/js/modules/map/map.html
+++ b/www/js/modules/map/map.html
@@ -10,8 +10,7 @@
 
 
                     <ui-gmap-windows show="'show'" closeClick="'closeClick'" templateUrl="'templateUrl'" templateParameter="'templateParameter'" ng-cloak>
-                        <div ng-non-bindable>{{address}}</div>
-                        <div ng-non-bindable>{{mobile}}</div>
+                        <div ng-non-bindable>{{address}} contact: {{mobile}}</div>
                     </ui-gmap-windows>
 
 
