--- a/www/js/modules/help/help.html
+++ b/www/js/modules/help/help.html
@@ -1,7 +1,23 @@
-<ion-view title="{{'menu_help' | translate}}">
-    <ion-content class="has-header" scroll="false">
-        <ion-slide-box auto-play="true" does-continue="true" slide-interval="1750">
+<ion-view title="Help">
 
-        </ion-slide-box>
-    </ion-content>
+<ion-content>
+
+  <ion-list>
+    <div ng-repeat="group in groups">
+      <ion-item class="item-stable"
+                ng-click="toggleGroup(group)"
+                ng-class="{active: isGroupShown(group)}">
+          <i class="icon" ng-class="isGroupShown(group) ? 'ion-minus' : 'ion-plus'"></i>
+        &nbsp;
+         Q :{{group.Q}}
+      </ion-item>
+      <ion-item class="item-accordion"
+                ng-repeat="item in group.A"
+                ng-show="isGroupShown(group)">
+        {{item}}
+      </ion-item>
+    </div>
+  </ion-list>
+
+</ion-content>
 </ion-view>
