final version v2 push

--- a/www/js/modules/login/login.html
+++ b/www/js/modules/login/login.html
@@ -15,6 +15,7 @@
                         <span class="input-label">Password</span>
                         <input type="password" ng-model="user.password">
                     </label>
+        
                     <button ng-click="signIn(user)" class="button button-block button-positive activated">
                         Sign In
                     </button>
@@ -24,7 +25,7 @@
                     </div>
 
                 <div class="col">
-                    Don't have account create new <strong><a href = "#/app/register">Sign Up now!</a></strong>
+                    Don't have account create new <strong><a href="#/app/register"">Sign Up now!</a></strong>
                 </div>
             </section>
         </ion-content>
