--- a/www/js/modules/profile/profile.html
+++ b/www/js/modules/profile/profile.html
@@ -6,9 +6,9 @@
 
             <div class="item item-avatar">
                 <img src={{sc.photoUrl}} fallback-src="img/logo.png" style="height: 100px;width: 100px">
-                <h2>{{sc.name}}</h2>
-                <p>{{sc.email}}</p>
-
+                <h2>{{sc.email}}</h2>
+                <p>Mob: {{sc.mobile}}</p>
+                <p>Address : {{sc.address}}</p>
             </div>
 
             <div class="item item-body">
