--- a/www/js/modules/register/register.html
+++ b/www/js/modules/register/register.html
@@ -17,8 +17,8 @@
                 <input ng-model="user.password" type="password">
             </label>
             <label class="item item-input">
-                <span class="input-label">Display Name</span>
-                <input ng-model="user.displayname" type="text">
+                <span class="input-label">Mobile</span>
+                <input ng-model="user.mobile" type="text">
             </label>
             <button class="button button-full button-positive" ng-click="createUser(user)">Create</button>
         </div>
